2010-11-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_svbase
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_superadmin
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_stdgraphic
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_sqlparser
	* Fixed bug #16556: error in t3lib_sqlparser - missing second parameter in functioncall parseError
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_sqlengine
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_spritemanager
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_softrefproc
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_scbase
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_rteapi
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_registry
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_refindex
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_recordlist
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_readmail
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_querygenerator
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_positionmap
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_parsehtml_proc
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_parsehtml
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_pagetree
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_pagerenderer
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_page
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_modsettings
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_matchcondition
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_lock
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_loadmodules